`backface-visibility: hidden` prevents circle clipping on hover

--- a/css/main.scss
+++ b/css/main.scss
@@ -81,6 +81,7 @@ a.icon {
     transition: all 0.3s cubic-bezier(.07,1.5,.73,.8);
     transform: scale(1);
     will-change: all;
+    backface-visibility: hidden;
 
         &:hover {
             background-color: $white;
